# esp32-idf-hello-wifi-main

./: .gitignore  CMakeLists.txt  diagram.json  partitions.csv  wokwi.toml
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/data/: index.html
components/web_server/include/: web_server.h
main/: CMakeLists.txt  Kconfig.projbuild  btn_led.c  hc_http.c  hc_mqtt.c  idf_component.yml  main.c  nvs.c
main/include/: ble_server.h  btn_led.h  hc_gobal.h  hc_http.h  hc_http_client.h  hc_http_server.h  hc_mqtt.h  hc_ota.h  main_app.h  modbus_client.h  nvs.h  rtm.h  usb_host.h  ws2812b.h
main/src/: ble_server.c  btn_led.c  hc_gobal.c  hc_http.c  hc_http_client.c  hc_http_server.c  hc_mqtt.c  hc_ota.c  main_app.c  modbus_client.c  nvs.c  rtm.c  usb_host.c  ws2812b.c
